# gaugebench

./: .gitignore  .gitmodules  CNAME  Makefile  POLICY.md  README.md  index.html  pyproject.toml
demo/: README.md  demo_live_mock.sh  demo_live_signed.sh  demo_offline.sh  demo_wrap.sh
demo/bundles/demo_qic_aer/: manifest.json  receipt.json
demo/bundles/demo_qic_aer_signed/: manifest.json  provenance.json  receipt.json  results.json
demo/bundles/demo_wrapped_constellation_in/: config.json  logs.txt
demo/bundles/demo_wrapped_constellation_out/: manifest.json  provenance.json  receipt.json  results.json
demo/bundles/demo_wrapped_constellation_out/inputs/: metrics.json
gaugebench/: __init__.py  __main__.py  cli.py  git_utils.py
gaugebench/receipts/: receipt.py
gaugebench/runners/: hierarchy.py  qic.py  wrap.py
